Fix font size on small screen

--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -6,5 +6,5 @@
   justify-content: center;
   align-items: center;
   font-weight: 600;
-  font-size: 20px;
+  font-size: clamp(14px, 5vw, 20px);
 }
